<resources>
    <string name="app_name">Colombia Travel</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="rpassword">Repetir Password</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="principal">Principal</string>
    <string name="contra">Contraseña :</string>
    <string name="usuario">Usuario :</string>
    <string name="facebook_app_id">1441575915957420</string>
    <string name="fb_login_protocol_scheme">fb1441575915957420</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Compartir</string>
    <string name="title_notifications">Notificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Principal">Principal</string>
</resources>
