<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.michaelvelez.travelcol.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:src="@drawable/descarga"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:id="@+id/eCorreo"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:hint="@string/password"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:id="@+id/ePassword"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/iniciar"
                android:textAllCaps="false"
                android:onClick="iniciar"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:background="@color/colorPrimary"
                android:id="@+id/bIniciar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            >
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/registrarse"
            android:gravity="center_horizontal"
            android:onClick="registrar"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tRegistrar"/>

    </LinearLayout>



</LinearLayout>
